# OS_EX3

./: CMakeLists.txt  JobContext.cpp  JobContext.h  MakeFile  MapReduceFramework.cpp  README  SampleClient.cpp  ThreadContext.h  main.cpp  utilities.cpp  utilities.h
Atomic/: Makefile  atomicdemo.cpp  atomicdemo_multivar.cpp
Barrier/: Barrier.cpp
Sample Client/: SampleClient.cpp
